      repl.breakLink() with just the ids, reducing traffic
    . Automatically load the AnyEvent backend if needed.

0.25 to be released
    . Add CLEAR method to tied objects so now list-assignment
      to a hash works:
      
          %$foo = (Just => 'another', Javascript => 'Hacker');
          $foo->{Just} # another
          $foo->{Javascript} # Hacker

0.24 20110416
    . Redo connect logic in ->setup, so that we handle cases
      where MozRepl is unavailable gracefully.

0.23 20110415
    . Fix test failures
    . Postpone deprecation period of methods added to JS objects
      a bit. All methods will remain until after 0.25.

0.22 20110411
    . Added experimental AnyEvent-compatible backend MozRepl::AnyEvent
      This backend does not yet support asynchronous execution. It
      just plays well with other AnyEvent-enabled modules.
      It is not automatically loaded.
    ! Start of deprecation cycle for methods injected to the JS objects.
      ->__xpath will be moved to MozRepl::RemoteObject::Util::xpath
      Change
          $obj->__xpath(...)
      to
          $obj->MozRepl::RemoteObject::Util::xpath( ... )
      This makes the object cleaner and you shouldn't have many places
      where you call C<< ->__xpath >> anyway, as it is not available on
      most JS objects anyway.
      
      This method will go away in 0.23.

0.21 20110109
    . Remove a debugging help that crashed the module when it was called...

0.20 20110106
    . Improve event sending/handling
    . Add max_queue_size to limit queue backlog
    . Add stress-test for queue backlog
    . Collect statistics about roundtrips,callbacks,fetch,store
      in $repl->{stats}

0.19 20101211
    . Simplify Exporter usage
    . Add ->constant() method to (lazily) fetch Javascript constants
      and cache them on the Perl side of things.
    . Add more tests to ensure that we have no memory cycles

0.18 20101122
    . Add test for pop(), actually make pop() work